新增科室、医生简介等页面

--- a/doctor.html
+++ b/doctor.html
@@ -70,13 +70,6 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="js/jquery1.42.min.js"></script>
     <script src="js/jquery.SuperSlide.2.1.1.js"></script>
-    <style>
-        .w-main {
-            width: 1200px;
-            position: relative
-        }
-        .MC .w-main{width: 100%}
-    </style>
 </head>
 <body>
 <button class="btn f-btn pc-hide icon-menu">&#xe60b;</button>
@@ -97,22 +90,23 @@
     </div>
 </div>
 <script>
-    $('.btn').add('.mj-mcmenu-close').click(function(){
+    $('.btn').add('.mj-mcmenu-close').click(function () {
         $('.mj-mcmenu').toggleClass('on');
     });
-    $('.mj-mcmenu-bd .mj-mcmenu-title').click(function(){
+    $('.mj-mcmenu-bd .mj-mcmenu-title').click(function () {
         $(this).next().toggle('fast')
     });
 </script>
-
 
 <header>
     <div class="yj-top mc-hide">
         <div class="w-main f-bc f-cb ">
             <div class="yj-top-l">
                 <i class="yj-top-icon">&#xe601;</i>
+
                 <p class="yj-top-p">2015年8月20日 星期四</p>
                 <i class="yj-top-icon">&#xe604;</i>
+
                 <p class="yj-top-p">客服热线：020-62784188</p>
             </div>
             <div class="yj-top-r">
@@ -175,85 +169,98 @@
     </div>
 </div>
 
-<div class="yj-pic-roll mc-hide">
-    <div class="mj-slideFull ">
-        <div class="hd">
-            <ul>
-                <li>&nbsp;</li>
-                <li>&nbsp;</li>
-                <li>&nbsp;</li>
-            </ul>
+<div class="yj-itdc g-mw">
+    <div class="w-main g-mw f-bc f-cb">
+        <div class="yj-itdc-img" style="background-image: url(img/doc.jpg);"></div>
+        <div class="yj-itdc-box">
+            <p class="yj-itdc-name">蔡道章</p>
+            <a href="#"><div class="yj-itdc-yy"><p>预约挂号</p></div></a>
+            <div class="yj-itdc-txt">
+                <p>副院长、关节外科主任、主任医师、教授、博士生导师</p>
+            </div>
+            <div class="yj-itdc-good">
+                <span class="f-clr-b">擅长:</span>
+                <span>擅长膝、髋、肩、肘、踝等关节的人工关节初级及翻修置换手术，以及关节镜下的各种微创治疗</span>
+            </div>
         </div>
-        <div class="bd">
-            <ul>
-                <li><a href="#" target="_blank" class="mj-slideFull-img"
-                       style="background-image:url(img/1.jpg) ;">&nbsp;</a>
-                </li>
-                <li><a href="#" target="_blank" class="mj-slideFull-img"
-                       style="background-image:url(http://www.superslide2.com/otherDemo/2.22/images/2.jpg) ;">&nbsp;</a>
-                </li>
-                <li><a href="#" target="_blank" class="mj-slideFull-img"
-                       style="background-image:url(http://www.superslide2.com/otherDemo/2.22/images/3.jpg);">&nbsp;</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-    <script id="jsID" type="text/javascript">
-        $(function () {
-            var slide = $(".mj-slideFull");
-            var resizeBox = $(".bd ul", slide).add('.bd ul li', slide);
-            $(window).resize(function () {
-                resizeBox.width($(".mj-slideFull").width())
-            });
-            slide.slide({mainCell: ".bd ul", effect: "fold", autoPlay: true});
-        })
-    </script>
-</div>
-
-<div id="main">
-    <div class="w-main g-w g-mw f-bc f-cb">
-        <div class="yj-content-location">
-            <a href="#">首页</a>&gt;
-            <a href="#">新闻</a>&gt;正文
-        </div>
-                <div class="g-w70 g-mw f-fl">
-                    <div class="yj-nc f-p10">
-                        <div class="yj-nc-title">
-                            <h2>寻医问药进驻三星手机S健康，提供自诊、问诊健康服务</h2>
-                        </div>
-                        <div class="yj-nc-author">
-                            <i class="f-icon">&#xe607;</i>刘永
-                        </div>
-                        <div class="yj-nc-time">&bull;20小时前</div>
-                        <div class="yj-nc-summary">
-                            <p><b>文章摘要：</b></p>
-                            <p style="font-size: 16px">手机越来越贴心</p>
-                        </div>
-                        <div class="yj-nc-img" style="background-image: url(http://tupian.enterdesk.com/2014/mxy/01/10/03/9.jpg)">
-                        </div>
-                        <div class="yj-nc-content">
-                            <p>36 氪获悉，寻医问药与三星达成合作。寻医问药提供 “问医生 “及” 症状自查” 服务，进驻三星 S 健康平台。</p>
-                            <p>移动医疗服务正在越来越植入手机硬件当中，包括苹果、华为、小米等手机都加载了健康服务。从三星 S5 开始，三星手机就开始内置了 S 健康功能，它可以帮助我们测试心率、检测运动活动程度等等。在三星 S7、S6、S5、三星 Note4 等手机中，均内置有 S 健康功能。 </p>
-                            <p>寻医问药在三星 S 健康提供的症状自查功能，是基于专业可靠的医学数据库，提供一种类似医生问诊式的过程，引导用户清晰描述患者的症状，通过计算得出一个可能的病因范围，同时给出可能性级别。用户也可以查看计算结果中每个病因所对应的症状。问医生服务则是依托寻医问药平台拥有超过百万执业医师在线为患者免费解答健康相关的问题 ，患者可以通过图片、文字等方式与医生进行一对一咨询。此次与三星的合作，也是寻医问药进一步拓展移动端市场的举措。相较寻医问药 APP 端的目标群体，三星涉及群体更为广泛，依靠平台的品牌声量和使用率能够带给寻医问药更多的用户流量，三星的市场渠道帮助寻医问药完成渠道升级，开拓更大的市场空间。</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="yj-nc-recently g-w25 mc-hide f-m10 f-fl">
-                    <div class="mj-hot-list">
-                        <div class="mj-hot-list-title">热点关注</div>
-                        <ul class="mj-hot-list-ul">
-                            <li><a href="#" class="f-textof"><i class="mj-hot-list-i">1</i>中国医学装备协会病理装备技术专业委员会第一届年会暨第五届长三角地区病理</a></li>
-                            <li><a href="#" class="f-textof"><i class="mj-hot-list-i">2</i>理资讯病理资讯病理资讯病病理</a></li>
-                            <li><a href="#" class="f-textof"><i class="mj-hot-list-i">3</i>山东省召开上消化道癌筛查及早诊早治内镜病理阅片会</a></li>
-                            <li><a href="#" class="f-textof"><i class="mj-hot-list-i">4</i>理资讯病理资讯病理资讯病病理</a></li>
-                            <li><a href="#" class="f-textof"><i class="mj-hot-list-i">5</i>山东省召开上消化道癌筛查及早诊早治内镜病理阅片会</a></li>
-                            <li><a href="#" class="f-textof"><i class="mj-hot-list-i">6</i>中国医学装备协会病理装备技术专业委员会第一届年会暨第五届长三角地区病理</a></li>
-                        </ul>
-                    </div>
-                </div>
     </div>
 </div>
 
+<div class="yj-brief">
+    <div class="w-main g-mw f-cb f-bc">
+        <div class="yj-brief-box">
+        <div class="g-w70 f-fl">
+            <div class="yj-brief-left f-p20">
+            <div class="yj-brief-cz">
+                <div class="yj-container-before-title">
+                    <p class="yj-container-title">出诊时间</p>
+                </div>
+                <table class="datalist f-m20">
+                    <tr>
+                        <th scope="col">Name</th>
+                        <th scope="col">Class</th>
+                        <th scope="col">Birthday</th>
+                        <th scope="col">Constellation</th>
+                        <th scope="col">Mobile</th>
+                        <th scope="col">Sunday</th>
+                        <th scope="col">Monday</th>
+                        <th scope="col">Sunday</th>
+                        <th scope="col">Monday</th>
+                    </tr>
+                    <tr>                  <!-- 奇数行 -->
+                        <td>isaac</td>
+                        <td>W13</td>
+                        <td>Jun 24th</td>
+                        <td>Cancer</td>
+                        <td>1118159</td>
+                        <td>1118159</td>
+                        <td>1118159</td>
+                        <td>Jun 24th</td>
+                        <td>Cancer</td>
+                    </tr>
+                    <tr class="altrow">       <!-- 偶数行 -->
+                        <td>girlwing</td>
+                        <td>W210</td>
+                        <td>Sep 16th</td>
+                        <td>Virgo</td>
+                        <td>1307994</td>
+                        <td>1118159</td>
+                        <td>1118159</td>
+                        <td>Jun 24th</td>
+                        <td>Cancer</td>
+                    </tr>
+                    <tr>                  <!-- 奇数行 -->
+                        <td>tastestory</td>
+                        <td>W15</td>
+                        <td>Nov 29th</td>
+                        <td>Sagittarius</td>
+                        <td>1095245</td>
+                        <td>1118159</td>
+                        <td>1118159</td>
+                        <td>Jun 24th</td>
+                        <td>Cancer</td>
+                    </tr>
+                </table>
+            </div>
+            <div class="yj-brief-xx">
+                <div class="yj-container-before-title">
+                    <p class="yj-container-title">详细介绍</p>
+                </div>
+                <p class="f-m20">古代传递宾主之言的人。绍，绍继、接续。介绍指相继传话；为人引进或带入新的事物。见清 袁枚《随园诗话补遗》卷六：“余与和希斋 大司空，全无介绍，而蒙其矜宠特隆</p>
+           <p class="f-m20">自我介绍是向别人展示你自己的一个重要手段,自我介绍好不好,甚至直接关系到你给别人的第一印象的好坏及以后交往的顺利与否。同时,也是认识自我的手段。</p>
+            </div>
+        </div>
+        </div>
+        <div class="g-w30 f-fl g-mw">
+            <div class="yj-brief-wz">
+                <div class="yj-container-before-title f-m20">
+                    <p class="yj-container-title">相关文章</p>
+                </div>
+            </div>
+        </div>
+        </div>
+    </div>
+</div>
 
 
 <div class="footer">
