--- a/hospital.html
+++ b/hospital.html
@@ -69,16 +69,21 @@
     <link rel="stylesheet" href="css/extend.min.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="js/jquery1.42.min.js"></script>
-    <script src="js/jquery.SuperSlide.2.1.1.js"></script>
-    <style>
-        .w-main {
-            width: 1200px;
-            position: relative
-        }
-        .MC .w-main{width: 100%}
-    </style>
+    <script>
+        $(document).ready(function (){
+            $(".yj-intro-guide li").each(function(index){
+                $(this).click(function(){
+                    $(".yj-intro-guide li").removeClass("yj-intro-white yj-intro-blue");
+                    $(".yj-intro-guide li").eq(index).addClass("yj-intro-white yj-intro-blue");
+                    $(".yj-intro-gt").css("visibility","hidden");
+                    $(".yj-intro-gt",this).css("visibility","visible");
+                });
+            });
+        });
+    </script>
 </head>
 <body>
+
 <button class="btn f-btn pc-hide icon-menu">&#xe60b;</button>
 <div class="mj-mcmenu pc-hide">
     <button class="mj-mcmenu-close">X</button>
@@ -97,22 +102,23 @@
     </div>
 </div>
 <script>
-    $('.btn').add('.mj-mcmenu-close').click(function(){
+    $('.btn').add('.mj-mcmenu-close').click(function () {
         $('.mj-mcmenu').toggleClass('on');
     });
-    $('.mj-mcmenu-bd .mj-mcmenu-title').click(function(){
+    $('.mj-mcmenu-bd .mj-mcmenu-title').click(function () {
         $(this).next().toggle('fast')
     });
 </script>
-
 
 <header>
     <div class="yj-top mc-hide">
         <div class="w-main f-bc f-cb ">
             <div class="yj-top-l">
                 <i class="yj-top-icon">&#xe601;</i>
+
                 <p class="yj-top-p">2015年8月20日 星期四</p>
                 <i class="yj-top-icon">&#xe604;</i>
+
                 <p class="yj-top-p">客服热线：020-62784188</p>
             </div>
             <div class="yj-top-r">
@@ -175,85 +181,34 @@
     </div>
 </div>
 
-<div class="yj-pic-roll mc-hide">
-    <div class="mj-slideFull ">
-        <div class="hd">
-            <ul>
-                <li>&nbsp;</li>
-                <li>&nbsp;</li>
-                <li>&nbsp;</li>
-            </ul>
+<div class="yj-container">
+    <div class="w-main f-bc f-cb f-mt10">
+        <div class="yj-location">
+            <a href="#">首页</a>-
+            <a href="#">医院</a>-
+            <a>医院简介</a>
         </div>
-        <div class="bd">
-            <ul>
-                <li><a href="#" target="_blank" class="mj-slideFull-img"
-                       style="background-image:url(img/1.jpg) ;">&nbsp;</a>
-                </li>
-                <li><a href="#" target="_blank" class="mj-slideFull-img"
-                       style="background-image:url(http://www.superslide2.com/otherDemo/2.22/images/2.jpg) ;">&nbsp;</a>
-                </li>
-                <li><a href="#" target="_blank" class="mj-slideFull-img"
-                       style="background-image:url(http://www.superslide2.com/otherDemo/2.22/images/3.jpg);">&nbsp;</a>
-                </li>
-            </ul>
+        <div class="g-w20 f-fl">
+            <div class="yj-intro-guide">
+                <ul>
+                    <li class="yj-intro-zjyy" style="background-image: url(img/flower.jpg)">走进医院</li>
+                    <a href="#"><li>医院简介<span class="yj-intro-gt">&gt;</span></li></a>
+                    <a href="#"><li>组织架构<span class="yj-intro-gt">&gt;</span></li></a>
+                    <a href="#"><li>医院布局<span class="yj-intro-gt">&gt;</span></li></a>
+                    <a href="#"><li>医疗设备<span class="yj-intro-gt">&gt;</span></li></a>
+                    <a href="#"><li>荣誉资质<span class="yj-intro-gt">&gt;</span></li></a>
+                </ul>
+            </div>
         </div>
-    </div>
-    <script id="jsID" type="text/javascript">
-        $(function () {
-            var slide = $(".mj-slideFull");
-            var resizeBox = $(".bd ul", slide).add('.bd ul li', slide);
-            $(window).resize(function () {
-                resizeBox.width($(".mj-slideFull").width())
-            });
-            slide.slide({mainCell: ".bd ul", effect: "fold", autoPlay: true});
-        })
-    </script>
-</div>
+        <div class="g-w80 f-fr">
+            <div class="yj-hospital-title">
+                医院简介
+            </div>
+            <div class="yj-hospital-content f-m20"></div>
+        </div>
 
-<div id="main">
-    <div class="w-main g-w g-mw f-bc f-cb">
-        <div class="yj-content-location">
-            <a href="#">首页</a>&gt;
-            <a href="#">新闻</a>&gt;正文
-        </div>
-                <div class="g-w70 g-mw f-fl">
-                    <div class="yj-nc f-p10">
-                        <div class="yj-nc-title">
-                            <h2>寻医问药进驻三星手机S健康，提供自诊、问诊健康服务</h2>
-                        </div>
-                        <div class="yj-nc-author">
-                            <i class="f-icon">&#xe607;</i>刘永
-                        </div>
-                        <div class="yj-nc-time">&bull;20小时前</div>
-                        <div class="yj-nc-summary">
-                            <p><b>文章摘要：</b></p>
-                            <p style="font-size: 16px">手机越来越贴心</p>
-                        </div>
-                        <div class="yj-nc-img" style="background-image: url(http://tupian.enterdesk.com/2014/mxy/01/10/03/9.jpg)">
-                        </div>
-                        <div class="yj-nc-content">
-                            <p>36 氪获悉，寻医问药与三星达成合作。寻医问药提供 “问医生 “及” 症状自查” 服务，进驻三星 S 健康平台。</p>
-                            <p>移动医疗服务正在越来越植入手机硬件当中，包括苹果、华为、小米等手机都加载了健康服务。从三星 S5 开始，三星手机就开始内置了 S 健康功能，它可以帮助我们测试心率、检测运动活动程度等等。在三星 S7、S6、S5、三星 Note4 等手机中，均内置有 S 健康功能。 </p>
-                            <p>寻医问药在三星 S 健康提供的症状自查功能，是基于专业可靠的医学数据库，提供一种类似医生问诊式的过程，引导用户清晰描述患者的症状，通过计算得出一个可能的病因范围，同时给出可能性级别。用户也可以查看计算结果中每个病因所对应的症状。问医生服务则是依托寻医问药平台拥有超过百万执业医师在线为患者免费解答健康相关的问题 ，患者可以通过图片、文字等方式与医生进行一对一咨询。此次与三星的合作，也是寻医问药进一步拓展移动端市场的举措。相较寻医问药 APP 端的目标群体，三星涉及群体更为广泛，依靠平台的品牌声量和使用率能够带给寻医问药更多的用户流量，三星的市场渠道帮助寻医问药完成渠道升级，开拓更大的市场空间。</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="yj-nc-recently g-w25 mc-hide f-m10 f-fl">
-                    <div class="mj-hot-list">
-                        <div class="mj-hot-list-title">热点关注</div>
-                        <ul class="mj-hot-list-ul">
-                            <li><a href="#" class="f-textof"><i class="mj-hot-list-i">1</i>中国医学装备协会病理装备技术专业委员会第一届年会暨第五届长三角地区病理</a></li>
-                            <li><a href="#" class="f-textof"><i class="mj-hot-list-i">2</i>理资讯病理资讯病理资讯病病理</a></li>
-                            <li><a href="#" class="f-textof"><i class="mj-hot-list-i">3</i>山东省召开上消化道癌筛查及早诊早治内镜病理阅片会</a></li>
-                            <li><a href="#" class="f-textof"><i class="mj-hot-list-i">4</i>理资讯病理资讯病理资讯病病理</a></li>
-                            <li><a href="#" class="f-textof"><i class="mj-hot-list-i">5</i>山东省召开上消化道癌筛查及早诊早治内镜病理阅片会</a></li>
-                            <li><a href="#" class="f-textof"><i class="mj-hot-list-i">6</i>中国医学装备协会病理装备技术专业委员会第一届年会暨第五届长三角地区病理</a></li>
-                        </ul>
-                    </div>
-                </div>
     </div>
 </div>
-
 
 
 <div class="footer">
