--- a/content.html
+++ b/content.html
@@ -77,6 +77,15 @@
         }
         .MC .w-main{width: 100%}
     </style>
+    <script>
+        $(function(){
+            $('.yj-nav-a').hover(function(){
+                $('.yj-nav-child',this).stop(false,true).slideDown('fast');
+            },function(){
+                $('.yj-nav-child',this).stop(false,true).slideUp('fast');
+            });
+        });
+    </script>
 </head>
 <body>
 <button class="btn f-btn pc-hide icon-menu">&#xe60b;</button>
@@ -149,29 +158,83 @@
 
 <div class="yj-nav mc-hide">
     <div class="w-main f-bc f-cb">
-        <ul class="yj-nav-box">
-            <a href="#">
-                <li> 医院首页</li>
-            </a>
-            <a href="#">
-                <li> 医院概况</li>
-            </a>
-            <a href="#">
-                <li> 新闻公告</li>
-            </a>
-            <a href="#">
-                <li> 医疗服务</li>
-            </a>
-            <a href="#">
-                <li> 学科人才</li>
-            </a>
-            <a href="#">
-                <li> 护理园地</li>
-            </a>
-            <a href="#">
-                <li> 党群人事</li>
-            </a>
-        </ul>
+          <span class="yj-nav-a">
+            <b>医院首页</b>
+            <div class="yj-nav-child">
+                <ul>
+                    <li><a href="#" target="_blank">数字病理读片会平台</a></li>
+                    <li><a href="#" target="_blank">远程病理诊断云平台</a></li>
+                    <li><a href="#" target="_blank">数字化病理科信息系统</a></li>
+                    <li><a href="#" target="_blank">数字化病理科信息系统</a></li>
+                    <li><a href="#" target="_blank">数字化病理科信息系统</a></li>
+                </ul>
+            </div>
+        </span>
+          <span class="yj-nav-a">
+            <b>医院概况</b>
+            <div class="yj-nav-child">
+                <ul>
+                    <li><a href="#" target="_blank">数字病理读片会平台</a></li>
+                    <li><a href="#" target="_blank">远程病理诊断云平台</a></li>
+                    <li><a href="#" target="_blank">数字化病理科信息系统</a></li>
+                </ul>
+            </div>
+        </span>
+          <span class="yj-nav-a">
+            <b>新闻公告</b>
+            <div class="yj-nav-child">
+                <ul>
+                    <li><a href="#" target="_blank">数字病理读片会平台</a></li>
+                    <li><a href="#" target="_blank">远程病理诊断云平台</a></li>
+                    <li><a href="#" target="_blank">数字化病理科信息系统</a></li>
+                    <li><a href="#" target="_blank">远程病理诊断云平台</a></li>
+                    <li><a href="#" target="_blank">远程病理诊断云平台</a></li>
+                </ul>
+            </div>
+        </span>
+          <span class="yj-nav-a">
+            <b>医疗服务</b>
+            <div class="yj-nav-child">
+                <ul>
+                    <li><a href="#" target="_blank">数字病理读片会平台</a></li>
+                    <li><a href="#" target="_blank">远程病理诊断云平台</a></li>
+                    <li><a href="#" target="_blank">远程病理诊断云平台</a></li>
+                    <li><a href="#" target="_blank">远程病理诊断云平台</a></li>
+                    <li><a href="#" target="_blank">远程病理诊断云平台</a></li>
+                    <li><a href="#" target="_blank">数字化病理科信息系统</a></li>
+                </ul>
+            </div>
+        </span>
+          <span class="yj-nav-a">
+            <b>学科人才</b>
+            <div class="yj-nav-child">
+                <ul>
+                    <li><a href="#" target="_blank">数字病理读片会平台</a></li>
+                    <li><a href="#" target="_blank">远程病理诊断云平台</a></li>
+                    <li><a href="#" target="_blank">数字化病理科信息系统</a></li>
+                </ul>
+            </div>
+        </span>
+          <span class="yj-nav-a">
+            <b>护理园地</b>
+            <div class="yj-nav-child">
+                <ul>
+                    <li><a href="#" target="_blank">数字病理读片会平台</a></li>
+                    <li><a href="#" target="_blank">远程病理诊断云平台</a></li>
+                    <li><a href="#" target="_blank">数字化病理科信息系统</a></li>
+                </ul>
+            </div>
+        </span>
+          <span class="yj-nav-a">
+            <b>党群人事</b>
+            <div class="yj-nav-child">
+                <ul>
+                    <li><a href="#" target="_blank">数字病理读片会平台</a></li>
+                    <li><a href="#" target="_blank">远程病理诊断云平台</a></li>
+                    <li><a href="#" target="_blank">数字化病理科信息系统</a></li>
+                </ul>
+            </div>
+        </span>
     </div>
 </div>
 
